[tool.poetry]
name = "pystandups"
version = "0.3"
description = "A command line utility for working with daily standups."
authors = ["Azat Akhmetov"]
readme = "readme.md"
repository = "https://github.com/metov/pystandups"

[tool.poetry.dependencies]
python = "^3.6"
coloredlogs = "*"
dictdiffer = "*"
docopt = "*"
python-editor = "*"
questionary = "*"
tabulate = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
standup = "pystandups.cli:main"
